Update file structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
         <header>Header</header>
         <article>
-            <a href="../advanced_grid/index.html">Bilder</a>
+            <a href="images.html">Bilder</a>
         </article>
         <aside>Aside</aside>
         <footer>Footer</footer>
