--- a/images.html
+++ b/images.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Advanced Grid</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="images.css">
 </head>
 
 <body>
