--- a/images.html
+++ b/images.html
@@ -8,79 +8,79 @@
 <body>
     <div class="wrapper">
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
         <div class="box">
-            <img src="http://via.placeholder.com/400x400" />
+            <img src="https://via.placeholder.com/400x400" />
         </div>
     </div>
     </bodyTen </body>
