Completely overhaul structure

--- a/index.html
+++ b/index.html
@@ -1,19 +1,94 @@
 <html>
 
 <head>
-    <title>Simple Grid</title>
+    <title>CSS Grid Gallery</title>
     <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-    <div class="container">
-        <header>Header</header>
-        <article>
-            <a href="images.html">Bilder</a>
-        </article>
-        <aside>Aside</aside>
-        <footer>Footer</footer>
+    <div class="message">
+        Sorry, your browser does not support CSS Grid.
     </div>
+    <section class="section">
+        <h1>CSS Grid Gallery</h1>
+        <div class="grid">
+            <div class="item">
+                <div class="item__details">
+                    brushes
+                </div>
+            </div>
+            <div class="item item--large">
+                <div class="item__details">
+                    brushes
+                </div>
+            </div>
+            <div class="item item--medium">
+                <div class="item__details">
+                    sunglasses mural
+                </div>
+            </div>
+            <div class="item item--large">
+                <div class="item__details">
+                    wire structure
+                </div>
+            </div>
+            <div class="item item--full">
+                <div class="item__details">
+                    lights formation
+                </div>
+            </div>
+            <div class="item item--medium">
+                <div class="item__details">
+                    dancer
+                </div>
+            </div>
+            <div class="item item--large">
+                <div class="item__details">
+                    wire structure
+                </div>
+            </div>
+            <div class="item">
+                <div class="item__details">
+                    wire structure
+                </div>
+            </div>
+            <div class="item item--medium">
+                <div class="item__details">
+                    sunglasses mural
+                </div>
+            </div>
+            <div class="item item--large">
+                <div class="item__details">
+                    lights formation
+                </div>
+            </div>
+            <div class="item">
+                <div class="item__details">
+                    brushes
+                </div>
+            </div>
+            <div class="item item--medium">
+                <div class="item__details">
+                    dancer
+                </div>
+            </div>
+            <div class="item item--medium">
+                <div class="item__details">
+                    brushes
+                </div>
+            </div>
+            <div class="item item--large">
+                <div class="item__details">
+                    brushes
+                </div>
+            </div>
+            <div class="item">
+                <div class="item__details">
+                    lights formation
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
