Add card overlay example

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <section class="section">
         <h1>CSS Grid Gallery</h1>
         <div class="grid">
-            <div class="item">
+            <div id="card-overlay" class="item" onclick="javascript:location.href='card-overlay.html'">
                 <div class="item__details">
-                    brushes
+                    Card overlay
                 </div>
             </div>
             <div class="item item--large">
