Highlight new example

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="grid">
             <div id="card-overlay" class="item" onclick="javascript:location.href='card-overlay.html'">
                 <div class="item__details">
-                    Card overlay
+                    Card overlay (new example - click me!)
                 </div>
             </div>
             <div class="item item--large">
